burn_data/iptables
# Generated by iptables-save v1.3.5 on Tue May 14 16:13:20 2013
# Completed on Tue May 14 16:13:20 2013
# Generated by iptables-save v1.3.5 on Tue May 14 16:13:20 2013
*nat
:PREROUTING ACCEPT [20:1894]
:POSTROUTING ACCEPT [3:196]
:OUTPUT ACCEPT [3:196]
-A PREROUTING -p tcp -m tcp --dport 80 -j DNAT --to :8090
COMMIT
# Completed on Tue May 14 16:13:20 2013
# Generated by iptables-save v1.3.5 on Tue May 14 16:13:20 2013
*mangle
:PREROUTING ACCEPT [61:4618]
:INPUT ACCEPT [54:3822]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [40:3960]
:POSTROUTING ACCEPT [40:3960]
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [40:3960]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22222 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 554 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1720 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1936 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8089 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8090 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8100 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 123 -j ACCEPT
COMMIT
